# toss-the-coin-game

./: LICENSE  README.md  pyproject.toml
Animations/: coin_flip_animation.txt  idle_animation.txt
src/: animation.py  game_states.py  main.py  settings.py
src/ui/: screen.py
src/utils/: get_ascii_frames.py  utility.py
